# fortune_cookies

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  fortune-service.yaml  pod.yaml
k8s/: deployment.yaml  headless-service.yaml  jaeger-deployment.yaml  nodeport-service.yaml
src/: app.rs  lib.rs  main.rs  state.rs
